/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.platform.android.instrumentation;

import "google/protobuf/timestamp.proto";

option java_package = 'com.google.devtools.mobileharness.platform.android.instrumentation.result.proto';
option java_outer_classname = "TestCaseProto";
option java_multiple_files = true;

// Represents a test case
message TestCase {
  // Test case class name, e.g.: FooTest
  string test_class = 1;
  // Test case class name, e.g.: com.bar.foo
  string test_package = 2;
  // test case method name, e.g.: testFoo
  string test_method = 3;
  // Start time of test case
  google.protobuf.Timestamp start_time = 6;
  // End time of test case
  google.protobuf.Timestamp end_time = 7;
}
